syntax = "proto3";

package set_qr;

option go_package = "english-ai-full/internal/proto_qr/set";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message SetProto {
  int32 id = 1;
  string name = 2;
  string description = 3;
  repeated SetProtoDish dishes = 4;
  int32 user_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  bool is_favourite = 8;
  repeated int64 like_by = 9;
  bool is_public = 10;
  string image = 11;
  int32 price = 12;
}

message SetProtoSnapshot {
  int32 id = 1;
  string name = 2;
  string description = 3;
  repeated SetProtoDish dishes = 4;
  int32 user_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  int32 set_id = 8;
  bool is_public = 9;
  string image = 10;
  int32 price = 11;
}

message SetProtoDish {
  int32 dish_id = 1;
  int32 quantity = 2;
}

message CreateSetProtoRequest {
  string name = 1;
  string description = 2;
  repeated SetProtoDish dishes = 3;
  int32 user_id = 4;
  bool is_public = 5;
  string image = 6;
  int32 price = 7;
}

message UpdateSetProtoRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  repeated SetProtoDish dishes = 4;
  bool is_public = 5;
  string image = 6;
  int32 price = 7;
}
message SetProtoIdParam {
  int32 id = 1;
}


// add prodetail response


message SetProtoResponse {
  SetProto data = 1;
}

message SetProtoListResponse {
  repeated SetProto data = 1;
}


// -------------
message SetProtoDetailedResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  repeated SetProtoDishDetailed dishes = 4;
  int32 user_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  bool is_favourite = 8;
  repeated int64 like_by = 9;
  bool is_public = 10;
  string image = 11;
  int32 price = 12;
}
message SetProtoDishDetailed {
  int32 dish_id = 1;
  int32 quantity = 2;
  string name = 3;
  int32 price = 4;
  string description = 5;
  string image = 6;
  string status = 7;
}
message SetProtoListDetailResponse {
  repeated SetProtoDetailedResponse data = 1;
}
service SetService {
  rpc GetSetProtoList(google.protobuf.Empty) returns (SetProtoListResponse);
  rpc GetSetProtoDetail(SetProtoIdParam) returns (SetProtoResponse);
  rpc CreateSetProto(CreateSetProtoRequest) returns (SetProtoResponse);
  rpc UpdateSetProto(UpdateSetProtoRequest) returns (SetProtoResponse);
  rpc DeleteSetProto(SetProtoIdParam) returns (SetProtoResponse);


  rpc GetSetProtoListDetail(google.protobuf.Empty) returns (SetProtoListDetailResponse);
}